started building site

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/htmx.org@2.0.3"></script>
+    <!-- <script src="https://unpkg.com/htmx.org@2.0.3"></script> -->
     <link rel="stylesheet" href="web/css/base.css">
     <link rel="stylesheet" href="web/css/header.css">
+    <link rel="stylesheet" href="web/css/home.css">
     <title>Primal Bloodline</title>
 </head>
 <body>
