--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -1,6 +1,15 @@
 {{ define "content" }}
     <div id="section-1">
-        <p>Primal Bloodline Maine Coons</p>
-        <p>Cats from the ancient forests of Russia</p>
+        <p id="section-1-main-text">Primal Bloodline</p>
+        <p id="section-1-sub-text">- Felines from the ancient forests of Maine -</p>
+    </div>
+    <div id="section-2">
+        <p id="section-2-main-text">Who We Are</p>
+        <p id="section-2-sub-text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Quae quaerat illo aliquid animi sed aliquam, dolore deleniti! 
+            Incidunt saepe tempora delectus, illo, cum ipsam molestias 
+            placeat sit illum esse voluptas.
+        </p>
     </div>
 {{ end }}
