--- a/web/css/base.css
+++ b/web/css/base.css
@@ -17,7 +17,7 @@ button, input[type="submit"], input[type="reset"] {
 
 body {
     height: 100vh;
-	background-color: black;
+	background-color: rgba(0, 0, 0);
     display: grid;
     grid-template-rows: 7.5vh 1fr;
     font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
