--- a/web/css/home.css
+++ b/web/css/home.css
@@ -6,10 +6,6 @@
     align-items: center;
     justify-content: center;
     height: 92.5vh;
-    background-image: url('/web/images/cat2doctored.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
 }
 
 #section-1-main-text {
@@ -23,8 +19,9 @@
 }
 
 #section-2 {
-    background-color: rgba(255, 255, 255, 0.75);
-    color: black;
+    background-color: black;
+    box-shadow: 0px 18px 59px 73px rgba(0,0,0,1);
+    color: white;
     font-family: Dancing Script, cursive;
     display: flex;
     flex-direction: column;
