updated some stuff

--- a/web/css/header.css
+++ b/web/css/header.css
@@ -6,10 +6,10 @@ header {
     justify-content: center;
 }
 
-#logo {
+/* #logo {
     position: absolute;
     left: 2vw;
-}
+} */
 
 #site-name {
     color: whitesmoke;
