--- a/web/css/home.css
+++ b/web/css/home.css
@@ -8,17 +8,17 @@
     height: 92.5vh;
 }
 
-#section-1-main-text {
+.main-text {
     font-weight: 100;
     font-size: 30px;
 }
 
-#section-1-sub-text {
+.sub-text {
     font-size: 20px;
     opacity: 0.8;
 }
 
-#section-2 {
+.sub-section {
     background-color: black;
     box-shadow: 0px 18px 59px 73px rgba(0,0,0,1);
     color: white;
@@ -28,14 +28,23 @@
     align-items: center;
     justify-content: center;
     height: 60vh;
+    padding-left: 15vw;
+    padding-right: 15vw;
 }
 
-#section-2-main-text {
-    font-weight: 100;
-    font-size: 30px;
+.sub-section-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
-#section-2-sub-text {
-    font-size: 20px;
-    opacity: 0.8;
+.sub-section-content-image {
+    width: 10em;
+    height: 10em;
+    border-radius: 5px;
+}
+
+.sub-text {
+    padding: 2em;
 }
