--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -1,9 +1,9 @@
 {{ define "header" }}
 <header id="header">
-    <svg id="logo" height="40" width="40" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+    <!-- <svg id="logo" height="40" width="40" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
         <circle cx="50" cy="50" r="45" fill="none" stroke="white" stroke-width="2" />
         <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-family="Dancing Script, cursive" font-size="30" fill="white">PB</text>
-    </svg>
+    </svg> -->
     <p id="site-name">Primal Bloodline Maine Coons</p>
     <svg id="logout" width="40" height="30" viewBox="0 0 40 30" xmlns="http://www.w3.org/2000/svg">
         <rect x="0" y="5" width="28" height="1" fill="white"/>
