--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -1,15 +1,42 @@
 {{ define "content" }}
-    <div id="section-1">
-        <p id="section-1-main-text">Primal Bloodline</p>
-        <p id="section-1-sub-text">- Felines from the ancient forests of Maine -</p>
+    <div class="main-section" id="section-1">
+        <p class="main-text" id="section-1-main-text">Primal Bloodline</p>
+        <p class="sub-text" id="section-1-sub-text">Felines from the ancient forests of North America</p>
     </div>
-    <div id="section-2">
-        <p id="section-2-main-text">Who We Are</p>
-        <p id="section-2-sub-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-            Quae quaerat illo aliquid animi sed aliquam, dolore deleniti! 
-            Incidunt saepe tempora delectus, illo, cum ipsam molestias 
-            placeat sit illum esse voluptas.
-        </p>
+    <div class="sub-section" id="section-2">
+        <p class="main-text" id="section-2-main-text">The Cats</p>
+        <div class="sub-section-content">
+            <img class="sub-section-content-image" src="web/images/cat001.jpg" alt="a cat photo">
+            <p class="sub-text" id="section-2-sub-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Quae quaerat illo aliquid animi sed aliquam, dolore deleniti! 
+                Incidunt saepe tempora delectus, illo, cum ipsam molestias 
+                placeat sit illum esse voluptas.
+            </p>
+        </div>
+    </div>
+    <div class="sub-section" id="section-3">
+        <p class="main-text" id="section-3-main-text">The Breeder</p>
+        <div class="sub-section-content">
+            <p class="sub-text" id="section-3-sub-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Quae quaerat illo aliquid animi sed aliquam, dolore deleniti! 
+                Incidunt saepe tempora delectus, illo, cum ipsam molestias 
+                placeat sit illum esse voluptas.
+            </p>
+            <img class="sub-section-content-image" src="web/images/cat001.jpg" alt="a cat photo">
+        </div>
+    </div>
+    <div class="sub-section" id="section-4">
+        <p class="main-text" id="section-4-main-text">The Process</p>
+        <div class="sub-section-content">
+            <img class="sub-section-content-image" src="web/images/cat001.jpg" alt="a cat photo">
+            <p class="sub-text" id="section-4-sub-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Quae quaerat illo aliquid animi sed aliquam, dolore deleniti! 
+                Incidunt saepe tempora delectus, illo, cum ipsam molestias 
+                placeat sit illum esse voluptas.
+            </p>
+        </div>
     </div>
 {{ end }}
