--- a/web/css/home.css
+++ b/web/css/home.css
@@ -28,8 +28,8 @@
     align-items: center;
     justify-content: center;
     height: 60vh;
-    padding-left: 15vw;
-    padding-right: 15vw;
+    padding-left: 20vw;
+    padding-right: 20vw;
 }
 
 .sub-section-content {
@@ -47,4 +47,20 @@
 
 .sub-text {
     padding: 2em;
+}
+
+.sub-section-link {
+    color: white;
+    border-radius: 5px;
+    border: 1px solid white;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 2em;
+    padding-right: 2em;
+    opacity: 0.7;
+    transition: all 0.25s ease-in-out;
+}
+
+.sub-section-link:hover {
+    opacity: 1;
 }
