--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -4,7 +4,7 @@
         <p class="sub-text" id="section-1-sub-text">Felines from the ancient forests of North America</p>
     </div>
     <div class="sub-section" id="section-2">
-        <p class="main-text" id="section-2-main-text">The Cats</p>
+        <p class="main-text" id="section-2-main-text">The Bloodline</p>
         <div class="sub-section-content">
             <img class="sub-section-content-image" src="web/images/cat001.jpg" alt="a cat photo">
             <p class="sub-text" id="section-2-sub-text">
@@ -14,6 +14,7 @@
                 placeat sit illum esse voluptas.
             </p>
         </div>
+        <a class="sub-section-link" href="/tree">Bloodline</a>
     </div>
     <div class="sub-section" id="section-3">
         <p class="main-text" id="section-3-main-text">The Breeder</p>
@@ -24,13 +25,14 @@
                 Incidunt saepe tempora delectus, illo, cum ipsam molestias 
                 placeat sit illum esse voluptas.
             </p>
-            <img class="sub-section-content-image" src="web/images/cat001.jpg" alt="a cat photo">
+            <img class="sub-section-content-image" src="web/images/adia.png" alt="a cat photo">
         </div>
+        <a class="sub-section-link" href="/tree">About Me</a>
     </div>
     <div class="sub-section" id="section-4">
         <p class="main-text" id="section-4-main-text">The Process</p>
         <div class="sub-section-content">
-            <img class="sub-section-content-image" src="web/images/cat001.jpg" alt="a cat photo">
+            <img class="sub-section-content-image" src="web/images/process.png" alt="a cat photo">
             <p class="sub-text" id="section-4-sub-text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Quae quaerat illo aliquid animi sed aliquam, dolore deleniti! 
@@ -38,5 +40,6 @@
                 placeat sit illum esse voluptas.
             </p>
         </div>
+        <a class="sub-section-link" href="/tree">Purchase Process</a>
     </div>
 {{ end }}
