updated the css

--- a/web/css/header.css
+++ b/web/css/header.css
@@ -13,7 +13,8 @@ header {
 
 #site-name {
     color: whitesmoke;
-    font-family: Dancing Script, cursive;
+    /* font-family: Dancing Script, cursive; */
+    /* font-family: Luminari, fantasy; */
     font-size: 20px;
     margin: 0;
 }
