--- a/web/css/base.css
+++ b/web/css/base.css
@@ -34,6 +34,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+	font-family: Copperplate, fantasy;
 }
 
 #main-container {
