started working on sliding menu

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     {{ template "header" . }}
+    {{ template "menu" . }}
     <div id="main-container">
         {{ template "content" . }}
     </div>
