--- a/web/css/base.css
+++ b/web/css/base.css
@@ -15,7 +15,7 @@ button, input[type="submit"], input[type="reset"] {
 }
 
 a {
-    color: #0060B6;
+	color: white;
     text-decoration: none;
 }
 
@@ -39,4 +39,23 @@ body {
 
 #main-container {
 	overflow-y: auto;
+}
+
+#menu {
+	position: absolute;
+	top: 0;
+	height: 100vh;
+	width: 20vw;
+	transform: translateX(100vw);
+	transition: transform 0.3s ease-in-out;
+	background-color: #131313;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
+	color: white;
+}
+
+#menu.open {
+	transform: translateX(80vw);
 }
