--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="web/css/base.css">
     <link rel="stylesheet" href="web/css/header.css">
     <link rel="stylesheet" href="web/css/home.css">
+    <link rel="stylesheet" href="web/css/menu.css">
     <title>Primal Bloodline</title>
 </head>
 <body>
