--- a/web/css/base.css
+++ b/web/css/base.css
@@ -35,6 +35,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
 	font-family: Copperplate, fantasy;
+	overflow-x: hidden;
 }
 
 #main-container {
