--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -5,7 +5,8 @@
 	width: 10vw;
 	transform: translateX(100vw);
 	transition: transform 0.2s ease-in-out;
-	background-color: transparent;
+	background-color: black;
+    z-index: 100;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
