--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="web/css/header.css">
     <link rel="stylesheet" href="web/css/home.css">
     <link rel="stylesheet" href="web/css/menu.css">
+    <link rel="stylesheet" href="web/css/tree.css">
     <title>Primal Bloodline</title>
 </head>
 <body>
