--- a/web/templates/tree.html
+++ b/web/templates/tree.html
@@ -1,3 +1,5 @@
 {{ define "content" }}
-    <div style="height: 100px; width: 100px;">tree</div>
+    <div id="tree"></div>
+    <script src="web/js/FamilyTree.js"></script>
+    <script src="web/js/cattree.js"></script>
 {{ end }}
