--- a/web/templates/menu.html
+++ b/web/templates/menu.html
@@ -4,5 +4,6 @@
     <a class="menu-link" href="/tree">Breeder</a>
     <a class="menu-link" href="/tree">Process</a>
     <a class="menu-link" href="/tree">Order</a>
+    <a class="menu-link" href="/contact">Contact</a>
 </nav>
 {{ end }}
