--- a/web/css/index.css
+++ b/web/css/index.css
@@ -10,16 +10,15 @@ p {
 }
 
 a, a:hover, a:focus, a:active {
-      text-decoration: none;
-      color: inherit;
- }
+    text-decoration: none;
+    color: inherit;
+}
  /*-----------------------------*/
 
 #top-navbar {
     position: sticky;
     top: 0;
     height: 15vh;
-    background-color: aqua;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -30,13 +29,13 @@ a, a:hover, a:focus, a:active {
 }
 
 #left-nav-link {
-    margin-left: 2rem;
-    font-size: 40px;
+    margin-left: 4rem;
+    font-size: 38px;
 }
 
 #right-nav-links {
-    margin-right: 2rem;
-    font-size: 24px;
+    margin-right: 4rem;
+    font-size: 20px;
 }
 
 .right-nav-link {
@@ -67,6 +66,8 @@ a, a:hover, a:focus, a:active {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-left: 5rem;
+    padding-right: 5rem;
 }
 
 .header-container {
@@ -78,7 +79,7 @@ a, a:hover, a:focus, a:active {
 
 .section-header {
     margin-top: 8rem;
-    font-size: 40px;
+    font-size: 35px;
 }
 
 .content-container {
@@ -96,7 +97,7 @@ a, a:hover, a:focus, a:active {
 }
 
 .section-text {
-    font-size: 24px;
+    font-size: 22px;
     padding: 7rem;
 }
 
@@ -119,12 +120,21 @@ a, a:hover, a:focus, a:active {
 
 .section-link:hover {
     background-color: rgba(0, 0, 0, 0.408);
-    transition: all 0.25s ease;
+    transition: all 0.15s ease;
 }
 
 .section-image-small {
-    height: 10rem;
-    width: 10rem;
+    height: 13rem;
+    width: 13rem;
     border-radius: 50%;
     padding: 7rem;
+}
+
+#bloodline-section {
+    background-image: url("/web/images/forest-image-1.jpeg");
+}
+
+#contact-section {
+    color: white;
+    background-color: black;
 }
