--- a/web/css/index.css
+++ b/web/css/index.css
@@ -16,25 +16,38 @@ a, a:hover, a:focus, a:active {
  /*-----------------------------*/
 
 #top-navbar {
-    position: sticky;
+    position: fixed;
     top: 0;
     height: 15vh;
+    width: 100vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     font-family: Amita;
+    background: transparent;
+    transition: all 0.3s ease;
+    z-index: 100;
     color: white;
+}
+
+#top-navbar.scrolled {
+    background-color: white;
+    color: black;
+}
+
+#top-navbar.bottom {
     background-color: black;
+    color: white;
 }
 
 #left-nav-link {
-    margin-left: 4rem;
+    margin-left: 5rem;
     font-size: 38px;
 }
 
 #right-nav-links {
-    margin-right: 4rem;
+    margin-right: 5rem;
     font-size: 20px;
 }
 
@@ -42,20 +55,11 @@ a, a:hover, a:focus, a:active {
     padding-left: 1rem;
 }
 
-#hero-overlay {
-    position: absolute;
-    top: 0;
-    width: 100vw;
-    height: 185vh;
-    background-image: url("/web/images/don_don.jpeg");
+#hero-section {
+    background-image: url("/web/images/don_don_doctored.jpeg");
     background-size: cover;
     background-position: center;
-    opacity: 0.2;
-    z-index: 2;
-}
-
-#hero-section {
-    background-color: black;
+    height: 100vh;
 }
 
 .home-section {
@@ -66,8 +70,8 @@ a, a:hover, a:focus, a:active {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 5rem;
-    padding-right: 5rem;
+    padding-left: 9rem;
+    padding-right: 9rem;
 }
 
 .header-container {
@@ -130,8 +134,9 @@ a, a:hover, a:focus, a:active {
     padding: 7rem;
 }
 
-#bloodline-section {
-    background-image: url("/web/images/forest-image-1.jpeg");
+#mission-section {
+    background-color: white;
+    z-index: 3;
 }
 
 #contact-section {
