--- a/web/css/index.css
+++ b/web/css/index.css
@@ -56,7 +56,7 @@ a, a:hover, a:focus, a:active {
 }
 
 #hero-section {
-    background-image: url("/web/images/don_don_doctoredv2.jpeg");
+    background-image: url("/web/images/don_don_bw_glowing_v2.png");
     background-size: cover;
     background-position: center;
     height: 185vh;
