--- a/web/css/index.css
+++ b/web/css/index.css
@@ -58,6 +58,32 @@ a, a:hover, a:focus, a:active {
     padding-left: 2rem;
 }
 
+/*--- nav link hover effect ---*/
+.nav-link {
+  position: relative;
+  display: inline-block;
+}
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  /* background: linear-gradient(to right, #ff0000, #00ffff); */
+  background: linear-gradient(to right, #3700ff, #00ffff);
+  bottom: -5px;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s ease-out;
+}
+
+.nav-link:hover::after {
+  transform: scaleX(1);
+  /* transform-origin: left; */
+}
+/*-----------------------------*/
+
 #hero-section {
     background-image: url("/web/images/don_don_bw_glowing_v2.png");
     background-size: cover;
