--- a/web/css/index.css
+++ b/web/css/index.css
@@ -31,17 +31,17 @@ a, a:hover, a:focus, a:active {
 
 #top-navbar.top {
     background: transparent;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 #top-navbar.middle {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     color: black;
 }
 
 #top-navbar.bottom {
     background-color: black;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 #left-nav-link {
@@ -59,7 +59,7 @@ a, a:hover, a:focus, a:active {
 }
 
 /*--- nav link hover effect ---*/
-.nav-link {
+/* .nav-link {
   position: relative;
   display: inline-block;
 }
@@ -69,7 +69,6 @@ a, a:hover, a:focus, a:active {
   position: absolute;
   width: 100%;
   height: 2px;
-  /* background: linear-gradient(to right, #ff0000, #00ffff); */
   background: linear-gradient(to right, #3700ff, #00ffff);
   bottom: -5px;
   left: 0;
@@ -80,8 +79,7 @@ a, a:hover, a:focus, a:active {
 
 .nav-link:hover::after {
   transform: scaleX(1);
-  /* transform-origin: left; */
-}
+} */
 /*-----------------------------*/
 
 #hero-section {
@@ -93,7 +91,7 @@ a, a:hover, a:focus, a:active {
 
 .home-section {
     height: 85vh;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     color: black;
     font-family: Amita;
     display: flex;
@@ -142,7 +140,7 @@ a, a:hover, a:focus, a:active {
 
 .section-link {
     background-color: black;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
     padding-left: 50px;
     padding-right: 50px;
@@ -165,14 +163,13 @@ a, a:hover, a:focus, a:active {
 
 #mission-section {
     margin-top: 100vh;
-    background-color: white;
-    color: black;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: rgb(239, 239, 239);
     width: 100vw;
     height: 90vh;
-    opacity: 0.7;
 }
 
 #contact-section {
-    color: white;
+    color: rgb(255, 255, 255);
     background-color: black;
 }
