--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -6,19 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primal Bloodline</title>
     <link rel="stylesheet" href="web/css/index.css">
+    <link rel="stylesheet" href="web/css/kittens.css">
     <link href="https://fonts.googleapis.com/css2?family=Amita&display=swap" rel="stylesheet">
-    <script defer src="web/js/index.js"></script>
 </head>
 <body>
-    <nav class="top" id="top-navbar">
-        <a id="left-nav-link" class="nav-link" href="/">Primal Bloodline</a>
-        <div id="right-nav-links">
-            <a class="nav-link right-nav-link" href="/about">About</a>
-            <a class="nav-link right-nav-link" href="/about">Cats</a>
-            <a class="nav-link right-nav-link" href="/about">Bloodline</a>
-            <a class="nav-link right-nav-link" href="/about">Contact</a>
-        </div>
-    </nav>
     {{ block "content" . }}
     {{ end }}
 </body>
