--- a/web/css/kittens.css
+++ b/web/css/kittens.css
@@ -35,18 +35,24 @@
     height: 85vh;
     width: 100vw;
     font-family: Amita;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow-y: scroll;
 }
 
 /* kitten card */
 .kitten-card {
     border: solid 1px rgba(128, 128, 128, 0.2);
     border-radius: 5px;
-    width: 200px;
+    width: 22rem;
+    margin: 5rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .kitten-card-image {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    height: 200px;
-    width: 200px;
+    width: 100%;
 }
