--- a/web/templates/kittens.html
+++ b/web/templates/kittens.html
@@ -38,5 +38,33 @@
         <p class="kitten-card-description">A small but cute yellow cat.</p>
         <a href="">Details</a>
     </div>
+    <div class="kitten-card">
+        <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
+        <h3 class="kitten-card-name">Nabisco</h3>
+        <p class="kitten-card-price">$3500</p>
+        <p class="kitten-card-description">A small but cute yellow cat.</p>
+        <a href="">Details</a>
+    </div>
+    <div class="kitten-card">
+        <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
+        <h3 class="kitten-card-name">Nabisco</h3>
+        <p class="kitten-card-price">$3500</p>
+        <p class="kitten-card-description">A small but cute yellow cat.</p>
+        <a href="">Details</a>
+    </div>
+    <div class="kitten-card">
+        <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
+        <h3 class="kitten-card-name">Nabisco</h3>
+        <p class="kitten-card-price">$3500</p>
+        <p class="kitten-card-description">A small but cute yellow cat.</p>
+        <a href="">Details</a>
+    </div>
+    <div class="kitten-card">
+        <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
+        <h3 class="kitten-card-name">Nabisco</h3>
+        <p class="kitten-card-price">$3500</p>
+        <p class="kitten-card-description">A small but cute yellow cat.</p>
+        <a href="">Details</a>
+    </div>
 </div>
 {{ end }}
