added more styleing to kitten product page

--- a/web/templates/kittens.html
+++ b/web/templates/kittens.html
@@ -12,59 +12,63 @@
 <div id="kittens-main-container">
     <div class="kitten-card">
         <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
-        <h3 class="kitten-card-name">Nabisco</h3>
-        <p class="kitten-card-price">$3500</p>
+        <div class="kitten-card-sub-div">
+            <h3 class="kitten-card-name">Mina</h3>
+            <p>.</p>
+            <p class="kitten-card-price">$3500</p>
+        </div>
         <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a href="">Details</a>
+        <a class="kitten-link">Details</a>
     </div>
     <div class="kitten-card">
         <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
-        <h3 class="kitten-card-name">Nabisco</h3>
-        <p class="kitten-card-price">$3500</p>
+        <div class="kitten-card-sub-div">
+            <h3 class="kitten-card-name">Mina</h3>
+            <p>.</p>
+            <p class="kitten-card-price">$3500</p>
+        </div>
         <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a href="">Details</a>
+        <a class="kitten-link">Details</a>
     </div>
     <div class="kitten-card">
         <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
-        <h3 class="kitten-card-name">Nabisco</h3>
-        <p class="kitten-card-price">$3500</p>
+        <div class="kitten-card-sub-div">
+            <h3 class="kitten-card-name">Mina</h3>
+            <p>.</p>
+            <p class="kitten-card-price">$3500</p>
+        </div>
         <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a href="">Details</a>
+        <a class="kitten-link">Details</a>
     </div>
     <div class="kitten-card">
         <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
-        <h3 class="kitten-card-name">Nabisco</h3>
-        <p class="kitten-card-price">$3500</p>
+        <div class="kitten-card-sub-div">
+            <h3 class="kitten-card-name">Mina</h3>
+            <p>.</p>
+            <p class="kitten-card-price">$3500</p>
+        </div>
         <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a href="">Details</a>
+        <a class="kitten-link">Details</a>
     </div>
     <div class="kitten-card">
         <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
-        <h3 class="kitten-card-name">Nabisco</h3>
-        <p class="kitten-card-price">$3500</p>
+        <div class="kitten-card-sub-div">
+            <h3 class="kitten-card-name">Mina</h3>
+            <p>.</p>
+            <p class="kitten-card-price">$3500</p>
+        </div>
         <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a href="">Details</a>
+        <a class="kitten-link">Details</a>
     </div>
     <div class="kitten-card">
         <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
-        <h3 class="kitten-card-name">Nabisco</h3>
-        <p class="kitten-card-price">$3500</p>
+        <div class="kitten-card-sub-div">
+            <h3 class="kitten-card-name">Mina</h3>
+            <p>.</p>
+            <p class="kitten-card-price">$3500</p>
+        </div>
         <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a href="">Details</a>
-    </div>
-    <div class="kitten-card">
-        <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
-        <h3 class="kitten-card-name">Nabisco</h3>
-        <p class="kitten-card-price">$3500</p>
-        <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a href="">Details</a>
-    </div>
-    <div class="kitten-card">
-        <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
-        <h3 class="kitten-card-name">Nabisco</h3>
-        <p class="kitten-card-price">$3500</p>
-        <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a href="">Details</a>
+        <a class="kitten-link">Details</a>
     </div>
 </div>
 {{ end }}
