--- a/web/css/kittens.css
+++ b/web/css/kittens.css
@@ -43,16 +43,59 @@
 
 /* kitten card */
 .kitten-card {
-    border: solid 1px rgba(128, 128, 128, 0.2);
+    /* border: solid 1px rgba(128, 128, 128, 0.2); */
     border-radius: 5px;
     width: 22rem;
     margin: 5rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
 }
 
 .kitten-card-image {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
     width: 100%;
+    cursor: pointer;
+}
+
+.kitten-card-image:hover {
+    opacity: 0.8;
+    transition: all 0.15s ease;
+}
+
+.kitten-card-sub-div {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.kitten-card-name {
+    font-size: x-large;
+}
+
+.kitten-card-price {
+    opacity: 0.7;
+}
+
+.kitten-link {
+    background-color: black;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.kitten-link:hover {
+    background-color: rgba(0, 0, 0, 0.408);
+    transition: all 0.15s ease;
 }
