started working on individual cat details pages

--- a/web/templates/kittens.html
+++ b/web/templates/kittens.html
@@ -18,7 +18,7 @@
             <p class="kitten-card-price">$3500</p>
         </div>
         <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a class="kitten-link">Details</a>
+        <a class="kitten-link" href="/cat-details/mina">Details</a>
     </div>
     <div class="kitten-card">
         <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
@@ -28,7 +28,7 @@
             <p class="kitten-card-price">$3500</p>
         </div>
         <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a class="kitten-link">Details</a>
+        <a class="kitten-link" href="/cat-details/pablo">Details</a>
     </div>
     <div class="kitten-card">
         <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
