--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primal Bloodline</title>
-    <link rel="stylesheet" href="web/css/index.css">
-    <link rel="stylesheet" href="web/css/kittens.css">
+    <link rel="stylesheet" href="/web/css/index.css">
+    <link rel="stylesheet" href="/web/css/kittens.css">
+    <link rel="stylesheet" href="/web/css/cat-details.css">
     <link href="https://fonts.googleapis.com/css2?family=Amita&display=swap" rel="stylesheet">
 </head>
 <body>
