--- a/web/templates/pablo.html
+++ b/web/templates/pablo.html
@@ -1,14 +1,6 @@
 {{ template "layout.html" }}
 {{ define "content" }}
-<nav id="kittens-top-navbar">
-    <a id="kittens-left-nav-link" class="kittens-nav-link" href="/">Primal Bloodline</a>
-    <div id="kittens-right-nav-links">
-        <a class="kittens-nav-link kittens-right-nav-link" href="/about">About</a>
-        <a class="kittens-nav-link kittens-right-nav-link" href="/kittens">Cats</a>
-        <a class="kittens-nav-link kittens-right-nav-link" href="/about">Bloodline</a>
-        <a class="kittens-nav-link kittens-right-nav-link" href="/about">Contact</a>
-    </div>
-</nav>
+{{ template "alternate-nav" }}
 <div class="cat-details-container">
     <div class="cat-details-sub-container">
         <img class="cat-details-image" src="/web/images/mina.jpeg" alt=" a cat photo">
