added the boilerplate enquire page

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,4 +1,4 @@
-{{ template "layout.html" }}
+{{ template "layout" }}
 {{ define "content" }}
 {{ template "main-nav" }}
 <div class="home-section" id="hero-section">
