--- a/web/templates/mina.html
+++ b/web/templates/mina.html
@@ -1,4 +1,4 @@
-{{ template "layout.html" }}
+{{ template "layout" }}
 {{ define "content" }}
 {{ template "alternate-nav" }}
 <div class="cat-details-container">
@@ -19,7 +19,7 @@
             <div class="cat-details-sub-text">
                 <p class="cat-detail-label">Color:</p><p class="cat-detail">Grey/Orange</p>
             </div>
-            <a class="cat-details-link" href="/cat-details/mina">Inquire</a>
+            <a class="cat-details-link" href="/inquire">Inquire</a>
         </div>
     </div>
 </div>
