--- a/web/templates/mina.html
+++ b/web/templates/mina.html
@@ -2,25 +2,25 @@
 {{ define "content" }}
 {{ template "alternate-nav" }}
 <div class="cat-details-container">
-    <div class="cat-details-sub-container">
+    <div class="cat-details-image-container">
         <img class="cat-details-image" src="/web/images/mina.jpeg" alt=" a cat photo">
-        <div class="cat-details-text">
-            <p class="cat-name">Mina</p>
-            <p class="cat-price">$4,000</p>
-            <div class="cat-details-sub-text">
-                <p class="cat-detail-label">DOB:</p><p class="cat-detail">2025-01-03</p>
-            </div>
-            <div class="cat-details-sub-text">
-                <p class="cat-detail-label">Litter:</p><p class="cat-detail">Beta</p>
-            </div>
-            <div class="cat-details-sub-text">
-                <p class="cat-detail-label">Age:</p><p class="cat-detail">2 Months</p>
-            </div>
-            <div class="cat-details-sub-text">
-                <p class="cat-detail-label">Color:</p><p class="cat-detail">Grey/Orange</p>
-            </div>
-            <a class="cat-details-link" href="/inquire">Inquire</a>
+    </div>
+    <div class="cat-details-text">
+        <p class="cat-name">Mina</p>
+        <p class="cat-price">$4,000</p>
+        <div class="cat-details-sub-text">
+            <p class="cat-detail-label">DOB:</p><p class="cat-detail">2025-01-03</p>
         </div>
+        <div class="cat-details-sub-text">
+            <p class="cat-detail-label">Litter:</p><p class="cat-detail">Beta</p>
+        </div>
+        <div class="cat-details-sub-text">
+            <p class="cat-detail-label">Age:</p><p class="cat-detail">2 Months</p>
+        </div>
+        <div class="cat-details-sub-text">
+            <p class="cat-detail-label">Color:</p><p class="cat-detail">Grey/Orange</p>
+        </div>
+        <a class="cat-details-link" href="/inquire/mina">Inquire</a>
     </div>
 </div>
 {{ end }}
