--- a/web/css/index.css
+++ b/web/css/index.css
@@ -99,7 +99,7 @@ a, a:hover, a:focus, a:active {
     margin-top: 100vh;
     background-color: rgba(255, 255, 255, 0.1);
     color: rgb(239, 239, 239);
-    width: 100vw;
+    width: 100%;
     height: 90vh;
 }
 
