--- a/web/css/main-nav.css
+++ b/web/css/main-nav.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     height: 15vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
