made some more changes

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="content-container">
         <p class="section-text">
-            View all of our available kittens.
+            View all of our currently available kittens.
         </p>
         <div class="image-button-container">
             <img class="section-image-small" src="/web/images/mina.jpeg" alt="">
@@ -40,9 +40,8 @@
             <a class="section-link" href="/bloodline">View Bloodline</a>
         </div>
         <p class="section-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-            Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
-            corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
+            Our bloodline is carefully cultivated and nurtured to develop
+            the most viral and primal breed possible.
         </p>
     </div>
 </div>
@@ -52,9 +51,8 @@
     </div>
     <div class="content-container">
         <p class="section-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-            Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
-            corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
+            Adia has decades of animal experience and pours everything she has
+            into ensuring her animals are nutured and healthy.
         </p>
         <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
     </div>
@@ -66,10 +64,7 @@
     <div class="content-container">
         <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
         <p class="section-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-            Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
-            corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
-        </p>
+            Send us any questions you have about anything.
     </div>
 </div>
 {{ end }}
