--- a/web/css/kittens.css
+++ b/web/css/kittens.css
@@ -12,26 +12,29 @@
 
 /* kitten card */
 .kitten-card {
-    border-radius: 5px;
-    width: 22rem;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    width: 25rem;
     margin: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 15px 15px rgba(0, 0, 0, 0.05);
 }
 
 .kitten-card-image {
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
     width: 100%;
     cursor: pointer;
 }
 
-.kitten-card-image:hover {
+/* .kitten-card-image:hover {
     opacity: 0.8;
     transition: all 0.15s ease;
-}
+} */
 
 .kitten-card-sub-div {
     display: flex;
