removed bloodline link

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -37,7 +37,7 @@
     <div class="content-container">
         <div class="image-button-container">
             <img class="section-image-small" src="/web/images/mina.jpeg" alt="">
-            <a class="section-link" href="/bloodline">View Bloodline</a>
+            <!-- <a class="section-link" href="/bloodline">View Bloodline</a> -->
         </div>
         <p class="section-text">
             Our bloodline is carefully cultivated and nurtured to develop
