changed up endpoint in contact form

--- a/web/templates/inquire.html
+++ b/web/templates/inquire.html
@@ -10,7 +10,7 @@
         <p class="form-sub-text">
             Send us any questions you have about {{ .CatName }}.
         </p>
-        <form class="contact-form" action="/api/inquire" method="post">
+        <form class="contact-form" action="/api/contact" method="post">
             <label class="form-label" for="name">Name</label>
             <br>
             <input class="form-input text-input" type="text" id="name" name="name">
