--- a/web/templates/inquire.html
+++ b/web/templates/inquire.html
@@ -13,7 +13,7 @@
         <form class="contact-form" action="/api/contact" method="post">
             <label class="form-label" for="name">Name</label>
             <br>
-            <input class="form-input text-input" type="text" id="name" name="name" required>
+            <input class="form-input text-input" type="text" id="name" name="name" maxlength="40" required>
             <br>
             <label class="form-label" for="number">Phone Number</label>
             <br>
