added kitten photos"

--- a/web/templates/kittens.html
+++ b/web/templates/kittens.html
@@ -3,44 +3,44 @@
 {{ template "alternate-nav" }}
 <div id="kittens-main-container">
     <div class="kitten-card">
-        <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
+        <img class="kitten-card-image" src="/web/images/kuma.jpeg" alt="">
         <div class="kitten-card-sub-div">
-            <h3 class="kitten-card-name">Mina</h3>
+            <h3 class="kitten-card-name">Kuma</h3>
             <p>.</p>
             <p class="kitten-card-price">$4,000</p>
         </div>
-        <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a class="kitten-link" href="/cat-details/mina">Details</a>
+        <p class="kitten-card-description">'Kuma' means bear in Japanese.</p>
+        <a class="kitten-link" href="/cat-details/kuma">Details</a>
     </div>
     <div class="kitten-card">
-        <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
+        <img class="kitten-card-image" src="/web/images/kuro.jpeg" alt="">
         <div class="kitten-card-sub-div">
-            <h3 class="kitten-card-name">Mina</h3>
+            <h3 class="kitten-card-name">Kuro</h3>
             <p>.</p>
             <p class="kitten-card-price">$4,000</p>
         </div>
-        <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a class="kitten-link" href="/cat-details/pablo">Details</a>
+        <p class="kitten-card-description">'kuro' means black in Japanese.</p>
+        <a class="kitten-link" href="/cat-details/kuro">Details</a>
+    </div>
+        <div class="kitten-card">
+        <img class="kitten-card-image" src="/web/images/umi.jpeg" alt="">
+        <div class="kitten-card-sub-div">
+            <h3 class="kitten-card-name">Umi</h3>
+            <p>.</p>
+            <p class="kitten-card-price">$4,000</p>
+        </div>
+        <p class="kitten-card-description">'umi' means ocean in Japanese.</p>
+        <a class="kitten-link" href="/cat-details/umi">Details</a>
     </div>
     <div class="kitten-card">
-        <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
+        <img class="kitten-card-image" src="/web/images/yume.jpeg" alt="">
         <div class="kitten-card-sub-div">
-            <h3 class="kitten-card-name">Mina</h3>
+            <h3 class="kitten-card-name">Yume</h3>
             <p>.</p>
             <p class="kitten-card-price">$4,000</p>
         </div>
-        <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a class="kitten-link">Details</a>
-    </div>
-    <div class="kitten-card">
-        <img class="kitten-card-image" src="/web/images/mina.jpeg" alt="">
-        <div class="kitten-card-sub-div">
-            <h3 class="kitten-card-name">Mina</h3>
-            <p>.</p>
-            <p class="kitten-card-price">$4,000</p>
-        </div>
-        <p class="kitten-card-description">A small but cute yellow cat.</p>
-        <a class="kitten-link">Details</a>
+        <p class="kitten-card-description">'yume' means dream in Japanese.</p>
+        <a class="kitten-link" href="/cat-details/yume">Details</a>
     </div>
 </div>
 {{ end }}
