--- a/web/css/alternate-nav.css
+++ b/web/css/alternate-nav.css
@@ -14,6 +14,16 @@
     color: white;
 }
 
+#alternate-nav-left-link {
+    margin-left: 1rem;
+}
+
+.site-title {
+    width: 22.5rem;
+    fill: white;
+    margin-top: 0.75rem;
+}
+
 #alternate-nav-right-links {
     margin-right: 5rem;
     font-size: 18px;
@@ -23,7 +33,3 @@
     padding-left: 2rem;
 }
 
-#alternate-nav-left-link {
-    margin-left: 5rem;
-    font-size: 32px;
-}
