made some more changes

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -18,7 +18,7 @@
 </div>
 <div class="home-section" id="cat-section">
     <div class="header-container">
-        <p class="section-header">The Cats</p>
+        <p class="section-header">The Kittens</p>
     </div>
     <div class="content-container">
         <p class="section-text">
@@ -65,6 +65,7 @@
         <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
         <p class="section-text">
             Send us any questions you have about anything.
+        </p>
     </div>
 </div>
 {{ end }}
