--- a/web/templates/partials/alternate-nav.html
+++ b/web/templates/partials/alternate-nav.html
@@ -1,7 +1,7 @@
 {{ define "alternate-nav" }}
 <nav id="alternate-top-navbar">
     <a id="alternate-nav-left-link" href="/">
-                <svg
+        <svg
             class="site-title"
             viewBox="0 0 1800.0001 300"
             xmlns="http://www.w3.org/2000/svg"
@@ -54,9 +54,9 @@
         </svg>
     </a>
     <div id="alternate-nav-right-links">
-        <a class="alternate-nav-right-link" href="/about">About</a>
-        <a class="alternate-nav-right-link" href="/kittens">Cats</a>
-        <a class="alternate-nav-right-link" href="/about">Contact</a>
+        <!-- <a class="nav-link right-nav-link" href="/about">About</a> -->
+        <a class="nav-link right-nav-link" href="/kittens">Kittens</a>
+        <a class="nav-link right-nav-link" href="/contract">Contract</a>
     </div>
 </nav>
 {{ end }}
