--- a/web/templates/partials/main-nav.html
+++ b/web/templates/partials/main-nav.html
@@ -54,9 +54,9 @@
         </svg>
     </a>
     <div id="right-nav-links">
-        <a class="nav-link right-nav-link" href="/about">About</a>
-        <a class="nav-link right-nav-link" href="/kittens">Cats</a>
-        <a class="nav-link right-nav-link" href="/contact">Contact</a>
+        <!-- <a class="nav-link right-nav-link" href="/about">About</a> -->
+        <a class="nav-link right-nav-link" href="/kittens">Kittens</a>
+        <a class="nav-link right-nav-link" href="/contract">Contract</a>
     </div>
 </nav>
 {{ end }}
